<resources>
    <string name="app_name">GDSC</string>
    <string name="iv_description_cake_image">케이크 이미지</string>
    <string name="tv_starbucks_cake_title">7 레이어 가나슈 케이크</string>
    <string name="tv_starbucks_cake_title_eng">7 Layer Granache Cake</string>
    <string name="tv_starbucks_cake_des">초콜릿, 가나슈, 모카로 만든 시트와 크림이 7개의 층을\n이루어 모양부터 매력적인 케이크입니다.</string>
    <string name="tv_starbucks_cake_price">5,700원</string>
    <string name="tv_starbucks_cake_nutrition_info_label">제품 영양 정보</string>
    <string name="tv_starbucks_cake_count">1</string>
    <string name="tv_starbucks_cake_available_count">3개 주문 가능</string>
    <string name="tv_starbucks_cake_total_price">5,700원</string>
    <string name="tv_starbucks_cake_order">주문하기</string>
    <string name="tv_starbucks_cake_put_in">담기</string>
    <string name="iv_description_cake_heart">좋아요</string>
    <string name="iv_description_cake_up_count">수량 늘리기</string>
    <string name="iv_description_cake_down_count">수량 줄이기</string>
    <string name="iv_description_cake_next">영양정보 바로가기</string>
    <string name="tv_dummy_data">testtesttest</string>
    <string name="tv_item_starbucks_order_title">Order</string>
    <string name="tv_starbucks_order_title_entire">전체 메뉴</string>
    <string name="tv_starbucks_order_title_mine">나만의 메뉴</string>
    <string name="tv_starbucks_order_beverage_label">음료</string>
    <string name="tv_starbucks_order_food_label">푸드</string>
    <string name="tv_starbucks_order_product_label">상품</string>
    <string name="navigation_first">첫번째</string>
    <string name="navigation_second">두번째</string>
    <string name="navigation_third">세번째</string>

</resources>