<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/iv_starbucks_cake_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_description_cake_image"
        android:scaleType="centerCrop"
        android:src="@drawable/img_cake"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_starbucks_cake_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/tv_starbucks_cake_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_starbucks_cake_img" />

    <TextView
        android:id="@+id/tv_starbucks_cake_title_eng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_starbucks_cake_title_eng"
        android:textColor="@color/gray400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_starbucks_cake_title" />

    <TextView
        android:id="@+id/tv_starbucks_cake_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_starbucks_cake_des"
        android:textColor="@color/gray600"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_starbucks_cake_title_eng" />

    <TextView
        android:id="@+id/tv_starbucks_cake_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_starbucks_cake_price"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_starbucks_cake_des" />

    <View
        android:id="@+id/view_starbucks_cake_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray200"
        app:layout_constraintTop_toBottomOf="@id/tv_starbucks_cake_price" />

    <TextView
        android:id="@+id/tv_starbucks_cake_nutrition_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_starbucks_cake_nutrition_info_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_starbucks_cake_1" />

    <View
        android:id="@+id/view_starbucks_cake_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray200"
        app:layout_constraintTop_toBottomOf="@id/tv_starbucks_cake_nutrition_info_label" />

    <View
        android:id="@+id/view_starbucks_cake_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray200"
        app:layout_constraintTop_toBottomOf="@id/view_starbucks_cake_2" />

    <ImageView
        android:id="@+id/iv_starbucks_cake_next"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/iv_description_cake_next"
        android:src="@drawable/ic_navigate_next"
        app:layout_constraintBottom_toBottomOf="@id/tv_starbucks_cake_nutrition_info_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_starbucks_cake_1"
        app:layout_constraintTop_toTopOf="@id/tv_starbucks_cake_nutrition_info_label"
        app:tint="@color/gray600" />

    <ImageView
        android:id="@+id/iv_starbucks_cake_down_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/iv_description_cake_down_count"
        android:src="@drawable/ic_remove_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_starbucks_cake_3"
        app:tint="@color/gray200" />

    <TextView
        android:id="@+id/tv_starbucks_cake_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tv_starbucks_cake_count"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_starbucks_cake_down_count"
        app:layout_constraintStart_toEndOf="@id/iv_starbucks_cake_down_count"
        app:layout_constraintTop_toTopOf="@id/iv_starbucks_cake_down_count" />

    <ImageView
        android:id="@+id/iv_starbucks_cake_up_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/iv_description_cake_up_count"
        android:src="@drawable/ic_add_circle"
        app:layout_constraintBottom_toBottomOf="@id/iv_starbucks_cake_down_count"
        app:layout_constraintStart_toEndOf="@id/tv_starbucks_cake_count"
        app:layout_constraintTop_toTopOf="@id/iv_starbucks_cake_down_count"
        app:tint="@color/gray400" />

    <TextView
        android:id="@+id/tv_starbucks_available_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_starbucks_cake_available_count"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_starbucks_cake_down_count" />

    <TextView
        android:id="@+id/tv_starbucks_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:text="@string/tv_starbucks_cake_total_price"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_starbucks_cake_3" />

    <ImageView
        android:id="@+id/iv_starbucks_cake_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/iv_description_cake_heart"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toBottomOf="@id/tv_starbucks_put_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_starbucks_put_in"
        app:tint="@color/gray600" />

    <TextView
        android:id="@+id/tv_starbucks_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_green_fill_20_rect"
        android:paddingHorizontal="40dp"
        android:paddingVertical="8dp"
        android:text="@string/tv_starbucks_cake_order"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_starbucks_put_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_green_line_20_rect"
        android:paddingHorizontal="40dp"
        android:paddingVertical="8dp"
        android:text="@string/tv_starbucks_cake_put_in"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_starbucks_order" />

</androidx.constraintlayout.widget.ConstraintLayout>