<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/starbucks_order_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/tv_item_starbucks_order_title"
                android:textAppearance="@style/TextAppearance.Starbucks.Display" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_starbucks_order_title_entire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_starbucks_order_title_entire"
                android:textAppearance="@style/TextAppearance.Starbucks.Subhead"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_starbucks_order_title_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/tv_starbucks_order_title_mine"
                android:textAppearance="@style/TextAppearance.Starbucks.Subhead"
                app:layout_constraintStart_toEndOf="@id/tv_starbucks_order_title_entire"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_starbucks_order_main_line"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="6dp"
                android:background="@color/green"
                app:layout_constraintEnd_toEndOf="@id/tv_starbucks_order_title_entire"
                app:layout_constraintStart_toStartOf="@id/tv_starbucks_order_title_entire"
                app:layout_constraintTop_toBottomOf="@id/tv_starbucks_order_title_entire" />

            <View
                android:id="@+id/view_starbucks_order_line_1"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/gray200"
                app:layout_constraintTop_toBottomOf="@id/view_starbucks_order_main_line" />

            <TextView
                android:id="@+id/tv_starbucks_order_beverage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_starbucks_order_beverage_label"
                android:textAppearance="@style/TextAppearance.Starbucks.Body1_B"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_starbucks_order_line_1" />

            <TextView
                android:id="@+id/tv_starbucks_order_food_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/tv_starbucks_order_food_label"
                android:textAppearance="@style/TextAppearance.Starbucks.Body1_B"
                app:layout_constraintStart_toEndOf="@id/tv_starbucks_order_beverage_label"
                app:layout_constraintTop_toTopOf="@id/tv_starbucks_order_beverage_label" />

            <TextView
                android:id="@+id/tv_starbucks_order_product_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/tv_starbucks_order_product_label"
                android:textAppearance="@style/TextAppearance.Starbucks.Body1_B"
                app:layout_constraintStart_toEndOf="@id/tv_starbucks_order_food_label"
                app:layout_constraintTop_toTopOf="@id/tv_starbucks_order_beverage_label" />

            <View
                android:id="@+id/view_starbucks_order_line_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray200"
                app:layout_constraintTop_toBottomOf="@id/tv_starbucks_order_beverage_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_starbucks_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/view_starbucks_order_line_2"
                tools:listitem="@layout/item_starbucks_order" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>